--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -9,7 +9,7 @@
   align-items: flex-start;
   flex-direction: column;
 
-  margin-right: 5rem;
+  margin-right: 3rem;
 }
 
 .gpt3_header-content h1 {
@@ -20,12 +20,12 @@
   letter-spacing: -0.04em;
 }
 
-.gpt3_header-content p {
+.gpt3_header-content p { 
   font-family: var(--font-family);
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
-  line-height: 27px; 
+  line-height: 27px;  
   color: var(--color-text);
 
   margin-top: 1.5rem;
@@ -60,10 +60,10 @@
 
 .gpt3_header-content_input button{
     flex: 0.6;
-    width: 100%; 
+    width: 100%;  
     min-height: 50px;
     background: #FF4820;
-     font-family: var(--font-family);
+     font-family : var(--font-family);
     font-style: normal;
     font-weight: bold;  
     font-size: 20px;
@@ -75,4 +75,94 @@
 
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
+}
+
+.gpt3_header-content_people {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+
+  margin-top: 2rem;
+}
+
+.gpt3_header-content_people img{
+  width: 181.79px;
+  height: 38px;
+}
+
+.gpt3_header-content_people p{
+  margin: 0 0 0 1rem;
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 38px; 
+  color: #FFFFFF;
+  text-align: center;
+}
+
+.gpt3_header-image {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.gpt3_header-image img{
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (max-width: 1050px){
+  .gpt3_header {
+    flex-direction: column;
+  }
+
+  .gpt3_header-content {
+    margin: 0 0 3rem;
+  }
+}
+
+@media screen and (max-width: 650px){
+  .gpt3_header h1{
+    font-size: 48px;
+    line-height: 60px;
+  }
+
+  .gpt3_header p{
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .gpt3_header-content_people {
+    flex-direction: column;
+  }
+
+  .gpt3_header-content_people p{
+    margin: 0;
+  }
+
+  .gpt3_header-content_input input,
+  .gpt3_header-content_input button{
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
+
+@media screen and (max-width: 490px){
+  .gpt3_header h1{
+    font-size: 36px;
+    line-height: 48px;
+  }
+
+  .gpt3_header p{
+    font-size: 14px;
+    line-height: 24px;
+  }
+
+  .gpt3_header-content_input input,
+  .gpt3_header-content_input button{
+    font-size: 12px;
+    line-height: 16px;
+  }
 }
